--- a/handson_II.qmd
+++ b/handson_II.qmd
@@ -18,12 +18,12 @@ Repository II: Eure Entwicklung
 
 ## Vorsicht
 
-Der Entwicklungszyklus ist sehr eyakt ausgearbeitet, um bestimmte Situationen zu erzeugen. Also wirklich jeden Schritt *genau so* machen, wie beschrieben!
+Der Entwicklungszyklus ist sehr exakt ausgearbeitet, um bestimmte Situationen zu erzeugen. Also wirklich jeden Schritt *genau so* machen, wie beschrieben!
 
-# Schritt 1
+## Schritt 1
 
--   Erstellen eines Arbeitsordners, z.B. 
-    
+-   Erstellen eines Arbeitsordners, z.B.
+
 ```{bash}
 mkdir hands_on_ii
 cd hands_on_ii
@@ -31,127 +31,229 @@ cd hands_on_ii
 
 -   Clonen des Vorlagen-Repositories
 
-```bash
+``` bash
 git clone xxx.xxx.xxx
 ```
 
-# Schritt 2
+## Schritt 2
 
 Erstellen des Buch-Repositories
 
-```bash
+``` bash
 git init buch
 cd buch
 git branch -m main
 ```
 
-# Schritt 3
+## Schritt 3
 
-* Terminal 1: Vorlagen Repository
-```bash
+-   Terminal 1: Vorlagen Repository
+
+``` bash
 cd hands_on_ii
 cd vorlage
 ```
-* Terminal 2: Buch Repository
-```bash
+
+-   Terminal 2: Buch Repository
+
+``` bash
 cd hands_on_ii
 cd buch
 ```
 
-# Schritt 4 (Vorlage-Ordner/Fenster)
+## Schritt 4 (Vorlage-Ordner/Fenster)
 
-* Den ersten Entwicklungsstand (Projektbeginn) auschecken
+-   Den ersten Entwicklungsstand (Projektbeginn) auschecken
 
-```bash
+``` bash
 git checkout Step_1
 ```
 
-* Kopieren von `story_1.md` in den Buch-Ordner
-```bash
+-   Kopieren von `story_1.md` in den Buch-Ordner
+
+``` bash
 cp story_1.md ../buch
 ```
 
-# Aktueller Stand (Buch-Ordner/Fenster)
+## Aktueller Stand (Buch-Ordner/Fenster)
+
 Die erste Hälfte von Story 1 ist *geschrieben*.  
 Kurzen Blick in die Geschichte werfen, um Orientierung zu bekommen:
 
-```bash
+``` bash
 less story_1.md
 
 # beenden mit 'q'
 ```
 
+### Aufnehmen
+
+Status prüfen
+```bash
+git status
+```
+
+-------------
+
+Ausgabe:
+```bash
+Auf Branch main
+Noch keine Commits
+Zum Commit vorgemerkte Änderungen:
+  (benutzen Sie "git rm --cached <Datei>..."
+  zum Entfernen aus der Staging-Area)
+  neue Datei:
+      story1.md
+```
+
 **Noch keine Aufnahme in die Versionsverwaltung!**
 
-# Schritt 5 (Vorlage-Ordner/Fenster)
+## Schritt 5 (Vorlage-Ordner/Fenster)
 
-* Step 2 auschecken
-```bash
+-   Step 2 auschecken
+
+``` bash
 git checkout Step_2
 ```
-* Übertragen in den Buch Ordner
-```bash
+
+-   Übertragen in den Buch Ordner
+
+``` bash
 cp story_1.md ../buch
 ```
 
-# Schritt 6 BUCH
-* Kurzer Blick in die Geschichte
-
+* Im Buch-Ordner die Aufnahme in Git
 ```bash
+git add .
+git status
+```
+
+
+
+## Schritt 6 BUCH
+
+-   Kurzer Blick in die Geschichte
+
+``` bash
 less story_1.qmd
 
 # beenden mit 'q'
 ```
 
-* Versionieren
-```bash
+-   Versionieren
+
+``` bash
 git add story_1.md
-git commit -m "Erster Versuch"
+git commit -m "Guter Ansatz"
 ```
 
-# Schritt 7 (Buch)
-Anfang von Story 2 geplant - Branch erstellen
-```bash
-git switch -c entwicklung_story_2
-``` 
+## Schritt 7 (Buch)
 
-# Schritt 8: (Vorlage)
-* Step 3 auschecken
-```bash
+Anfang von Story 2 geplant - Branch erstellen
+
+``` bash
+git switch -c entwicklung_story_2
+```
+
+## Schritt 8: (Vorlage)
+
+-   Step 3 auschecken
+
+``` bash
 git checkout Step_3
 ```
-* Kopieren Story 2 Teil 1
-```bash
+
+-   Kopieren Story 2 Teil 1
+
+``` bash
 cp story_2.md ../buch/
 ```
 
-# Schritt 9: (Buch)
-* Blick ins Buch
-```bash
+## Schritt 9: (Buch)
+
+-   Blick ins Buch
+
+``` bash
 less story_2.md
 ```
-* Schaffenskrise - which way?
-```bash
+
+-   Schaffenskrise - which way?
+
+``` bash
 git switch -c story2_idee_1
 git switch -c story2_idee_2
 ```
-# Schritt 10
+
+## Schritt 10
+
 Beginnen mit Idee 1
 
-* richtigen Branch wählen (BUCH)
-```bash
+-   richtigen Branch wählen (BUCH)
+
+``` bash
 git switch story2_idee_1
 ```
-* Step 4 auschecken und kopieren (VORLAGE)
-```bash
-git checkout Step_3
+
+-   Step 4 auschecken und kopieren (VORLAGE)
+
+``` bash
+git checkout Step_4
 cp story_2.md ../buch
 ```
 
-# Schritt 11 (BUCH)
-*Ansehen
+## Schritt 11 (BUCH)
+
+* Ansehen
+```bash
+less story2.md
+```
 
 * Versionieren
+```bash 
+git add story2.md
+git commit-m "Inhalt nach Idee1 fortgeführt"
+```
 
+## Schritt 12 (Buch/vrlage)
+Entwurf Idee 2
 
-Schritt 10
+* Wechsel in richtigen Branch
+```bash
+git switch story2_idee_2
+```
+* Verfeinern von Idee 2
+```bash
+cd  ../vorlage
+git checkout Step_5
+cp story2.md ../buch/
+cd ../buch
+```
+* Versioinieren
+```bash
+git add story2.md
+git commit -m "Inhalt nach Idee 2 fortgeführt"
+```
+
+## Schritt 13
+Orientieren / Reparieren  
+
+Tauschen „weiße“ durch „weise“ im Entwicklungszweig 
+
+**Nicht in einem Ideen-Branch**
+
+```bash
+git switch entwicklung_story_2
+
+cd ../vorlage
+git checkout Step_6
+cp story2.md ../buch/
+cd ../buch
+git add story2.md
+git commit -m "typo 'weiße' korrigiert"
+```
+
+## Schritt 14
+Mergen von Branch *Idee 1* auf *Entwicklung*
+
+Auflösen des Konflikts
+
